--- a/index.Rmd
+++ b/index.Rmd
@@ -137,7 +137,7 @@ En su segunda fase, el proyecto busca dar continuidad al trabajo realizado para 
 
 Los datos publicados pueden ser usados por terceros, siempre y cuando se cite la fuente: [www.boliviaelectoral.com](http://boliviaelectoral.com/)
 
-La idea del proyecto es de Amaru Villanueva y se realiza con apoyo de la [Fundación Friedrich Ebert (FES)](https://www.fes-bolivia.org/). Para mayor información comunicarse con info@fes-bolivia.org
+El proyecto se realiza con apoyo de la [Fundación Friedrich Ebert (FES)](https://www.fes-bolivia.org/). Para mayor información comunicarse con info@fes-bolivia.org
 
 <br>
 <img src="img/cc.png"  height="40" width="100">
