--- a/index.Rmd
+++ b/index.Rmd
@@ -50,7 +50,11 @@ Si gusta consultar la base de datos con los resultados desagregados, incluyendo 
 Para simplificar el análisis, hemos consolidado como “Voto no declarado” las categorías ”No sabe/No responde”, “Blanco”, “Ninguno”, “Nulo”, “No contesta”, “Indecisos”, “Voto secreto”, “Blanco/Nulo” y “Ninguno/Blanco/Nulo”.
 
 En caso de que algún candidato no estuviese registrado en determinada encuesta, se completó este valor perdido con el valor más cercano. Por ejemplo, si la candidatura “x” fue computada para enero pero no para febrero, se repitió el valor de enero para febrero, con el fin de tener una proyección similar y comparable para todas las candidaturas.
+<br>
+<br>
 
+<b><h3>Sobre el voto válido</h3></b>
+Varias encuestadoras han difundido cifras sobre el voto válido, sin embargo, cada una tomó diferentes metodologías para realizar dicha proyección. Con fines metodológicos, hemos decido apegarnos a nuestro cálculo en el que se reparte proporcionalmente el “voto no declarado” entre todas las candidaturas.
 
 
 Base de datos {data-icon="fa-database"}
